change Payara Server version

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -16,7 +16,7 @@
                 <f:selectItem itemLabel="Tesoura" itemValue="3" />
             </h:selectOneRadio>
             <h:commandButton value="Jogar"
-                             action="#{VeiculoController.confirmarVeiculo}"/>
+                             action="#{jogadorController.confirmarEscolha}"/>
             </h:form>
     </h:body>
 </html>
