Revert "change Payara Server version"
This reverts commit 1b83cb8a5141bf10f9489a9e0a79fc80745ab354.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -16,7 +16,7 @@
                 <f:selectItem itemLabel="Tesoura" itemValue="3" />
             </h:selectOneRadio>
             <h:commandButton value="Jogar"
-                             action="#{jogadorController.confirmarEscolha}"/>
+                             action="#{VeiculoController.confirmarVeiculo}"/>
             </h:form>
     </h:body>
 </html>
