Add partial front-end

--- a/web/resultado.xhtml
+++ b/web/resultado.xhtml
@@ -2,15 +2,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Jokenpo - Resultado</title>
     </h:head>
-    <h:body>
+    <h:body style="text-align: center;">
         <h1>Pedra - Papel - Tesoura</h1>
         <h2>Resultado</h2>
-      <hr />
-      #{jogadorController.resultado}
+        
+        <h:panelGrid columns="3" cellspacing="8" cellpadding="12" style="margin-left: auto; margin-right: auto">
+            <h:panelGroup>
+                <h:panelGrid columns="1" columnClasses="alignmentLeft" style="margin-left: auto; margin-right: auto">
+                    <h:outputLabel value="Sua jogada"/>
+                </h:panelGrid>
+                <p:graphicImage value="/imgs/pedra_jogador.png" rendered="#{jogadorController.escolhaJogador == 1}"/>
+                <p:graphicImage value="/imgs/papel_jogador.png" rendered="#{jogadorController.escolhaJogador == 2}"/>
+                <p:graphicImage value="/imgs/tesoura_jogador.png" rendered="#{jogadorController.escolhaJogador == 3}"/>
+            </h:panelGroup>
+            <h:panelGroup>
+                <p style="font-size: 64px">X</p>
+            </h:panelGroup>
+            <h:panelGroup>
+                <h:panelGrid columns="1" columnClasses="alignmentRight" style="margin-left: auto; margin-right: auto">
+                    <h:outputLabel value="Computador"/>
+                </h:panelGrid>
+                <p:graphicImage value="/imgs/pedra_jogador.png" rendered="#{jogadorController.escolhaComputador == 1}"/>
+                <p:graphicImage value="/imgs/papel_jogador.png" rendered="#{jogadorController.escolhaComputador == 2}"/>
+                <p:graphicImage value="/imgs/tesoura_jogador.png" rendered="#{jogadorController.escolhaComputador == 3}"/>
+            </h:panelGroup>
+        </h:panelGrid>
+      
+      <h2>${jogadorController.resultado}</h2>
     </h:body>
 </html>
-
